# easycc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml
examples/chaincode/: build.gradle
examples/chaincode/src/main/java/: CollaborationContract.java
examples/chaincode/src/main/java/entity/: Decrement.java  DependentView.java  Duality.java  EconomicAgent.java  EconomicEvent.java  EconomicResource.java  Increment.java  Ownership.java  Participation.java  StockFlow.java
examples/chaincode/src/main/java/event/: EventsMapping.java
examples/chaincode/src/main/java/inputValidator/: DecrementInputValidator.java  DependentViewInputValidator.java  DualityInputValidator.java  EconomicAgentInputValidator.java  EconomicEventInputValidator.java  EconomicResourceInputValidator.java  IncrementInputValidator.java  OwnershipInputValidator.java  ParticipationInputValidator.java  StockFlowInputValidator.java
examples/chaincode/src/main/java/permissions/: EPT.java
examples/chaincode/src/main/java/runtime/: BusinessEvent.java  BusinessObject.java  CollaborationSetup.java  PermissionsHandler.java  StubHelper.java
examples/test-suite/: happy-path-test-suite.json
src/: cli.rs  main.rs  utils.rs  workspace.rs
src/commands/: clean.rs  create.rs  deploy.rs  export.rs  init.rs  mod.rs  start.rs  stop.rs  test.rs
src/config/: mod.rs  network_config.rs  network_state.rs
src/crypto/: mod.rs
src/network/: mod.rs
templates/: docker-compose.hbs
wiki/: Command-Reference.md  Getting-Started.md  Home.md  Installation.md  Testing-Guide.md
(+51 files in other folders)
