[package]
name = "easycc"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["EasyCC Contributors"]
description = "Easy Hyperledger Fabric network setup for chaincode testing"
license = "MIT"
repository = "https://github.com/AmaVic/easycc-dev"
documentation = "https://docs.rs/easycc"
readme = "README.md"
keywords = ["hyperledger", "fabric", "blockchain", "chaincode", "testing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.12"
colored = "3.0"
indicatif = "0.18"
bollard = "0.19"
handlebars = "6.3"
walkdir = "2.4"
dirs = "6.0"
hex = "0.4"
base64 = "0.22"
strip-ansi-escapes = "0.2"
